--- a/Index.HTML
+++ b/Index.HTML
@@ -15,7 +15,7 @@
         <div class="container">
             <nav class="navbar">
                 <div class="logo">
-                    <h1>Escape Oslo</h1>
+                    <h1>Escape Elvebakken</h1>
                 </div>
                 <ul class="nav-links">
                     <li><a href="#">Hjem</a></li>
@@ -47,17 +47,17 @@
                     </p>
                     <div class="room-grid">
                         <div class="room">
-                            <img src="room1.jpg" alt="Rom 1: Arkadens Hemmelighet">
+                            <img src="last ned (1).jpeg" alt="Rom 1: Arkadens Hemmelighet">
                             <h3>Rom 1: Arkadens Hemmelighet</h3>
                             <p>Utforsk en mystisk arkade fylt med gåter og spillmaskiner fra 80-tallet. Test dine ferdigheter og se om du kan avsløre hemmelighetene som lurer her.</p>
                         </div>
                         <div class="room">
-                            <img src="room2.jpg" alt="Rom 2: Tidsmaskinens Reise">
+                            <img src="last ned (2).jpeg" alt="Rom 2: Tidsmaskinens Reise">
                             <h3>Rom 2: Tidsmaskinens Reise</h3>
                             <p>Reis tilbake i tid til 1985 og unnslipp før tiden renner ut. Kan du og teamet ditt løse gåtene i tide?</p>
                         </div>
                         <div class="room">
-                            <img src="room3.jpg" alt="Rom 3: Den Neonbelyste Byen">
+                            <img src="last ned.jpeg" alt="Rom 3: Den Neonbelyste Byen">
                             <h3>Rom 3: Den Neonbelyste Byen</h3>
                             <p>Opplev en futuristisk neonby full av gåter og mystikk. Overlev en natt i denne mørke, men fargerike verdenen og finn veien ut!</p>
                         </div>
