--- a/Index.HTML
+++ b/Index.HTML
@@ -17,10 +17,9 @@
                     <h1>Escape Elvebakken</h1>
                 </div>
                 <ul class="nav-links">
-                    <li><a href="#">Hjem</a></li>
-                    <li><a href="#">Våre Rom</a></li>
+                    <li><a href="Index.HTML">Hjem</a></li>
                     <li><a href="Omoss.html">Om Oss</a></li>
-                    <li><a href="#">Kontakt</a></li>
+                    <li><a href="kontakt.html">Kontakt</a></li>
                 </ul>
             </nav>
         </div>
