--- a/Omoss.html
+++ b/Omoss.html
@@ -18,9 +18,8 @@
                 </div>
                 <ul class="nav-links">
                     <li><a href="Index.HTML">Hjem</a></li>
-                    <li><a href="#">Våre Rom</a></li>
-                    <li><a href="#">Om Oss</a></li>
-                    <li><a href="#">Kontakt</a></li>
+                    <li><a href="Omoss.css">Om Oss</a></li>
+                    <li><a href="kontakt.html">Kontakt</a></li>
                 </ul>
             </nav>
         </div>
