--- a/Index.HTML
+++ b/Index.HTML
@@ -68,7 +68,7 @@
     
     <footer>
         <div class="container">
-            <p>&copy; 2024 Escape Oslo. Alle rettigheter reservert.</p>
+            <p>&copy; 2024 Escape Elvebakken. Alle rettigheter reservert.</p>
         </div>
     </footer>
 
