--- a/kontakt.html
+++ b/kontakt.html
@@ -14,7 +14,7 @@
         <div class="container">
             <nav class="navbar">
                 <div class="logo">
-                    <h1>Escape World</h1>
+                    <h1>Escape Elvebakken</h1>
                 </div>
                 <ul class="nav-links">
                     <li><a href="Index.HTML">Hjem</a></li>
