--- a/Omoss.html
+++ b/Omoss.html
@@ -18,7 +18,7 @@
                 </div>
                 <ul class="nav-links">
                     <li><a href="Index.HTML">Hjem</a></li>
-                    <li><a href="Omoss.css">Om Oss</a></li>
+                    <li><a href="Omoss.html">Om Oss</a></li>
                     <li><a href="kontakt.html">Kontakt</a></li>
                 </ul>
             </nav>
