--- a/Omoss.html
+++ b/Omoss.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Om Oss - Escape World</title>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Omoss.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
 
