Masse greier og bilder

--- a/Index.HTML
+++ b/Index.HTML
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retro Escape Room Oslo</title>
+    <title>Escape Elvebakken</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -44,18 +44,18 @@
                     </p>
                     <div class="room-grid">
                         <div class="room">
-                            <img src="last ned (1).jpeg" alt="Rom 1: Arkadens Hemmelighet">
-                            <h3>Rom 1: Arkadens Hemmelighet</h3>
+                            <img src="Bilder/last ned (1).jpeg" alt="Rom 1: Arkadens Hemmelighet">
+                            <h3>Level 1</h3>
                             <p>Utforsk en mystisk arkade fylt med gåter og spillmaskiner fra 80-tallet. Test dine ferdigheter og se om du kan avsløre hemmelighetene som lurer her.</p>
                         </div>
                         <div class="room">
-                            <img src="last ned (2).jpeg" alt="Rom 2: Tidsmaskinens Reise">
-                            <h3>Rom 2: Tidsmaskinens Reise</h3>
+                            <img src="/Bilder/last ned (2).jpeg" alt="Rom 2: Tidsmaskinens Reise">
+                            <h3>Level 2</h3>
                             <p>Reis tilbake i tid til 1985 og unnslipp før tiden renner ut. Kan du og teamet ditt løse gåtene i tide?</p>
                         </div>
                         <div class="room">
-                            <img src="last ned.jpeg" alt="Rom 3: Den Neonbelyste Byen">
-                            <h3>Rom 3: Den Neonbelyste Byen</h3>
+                            <img src="/Bilder/last ned.jpeg" alt="Rom 3: Den Neonbelyste Byen">
+                            <h3>Level 3</h3>
                             <p>Opplev en futuristisk neonby full av gåter og mystikk. Overlev en natt i denne mørke, men fargerike verdenen og finn veien ut!</p>
                         </div>
                     </div>
