--- a/Omoss.html
+++ b/Omoss.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Om Oss - Escape World</title>
+    <title>Om Oss - Escape Elvebakken</title>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Style.css">
 </head>
@@ -31,26 +31,30 @@
             <div class="container">
                 <h2>Om Oss</h2>
                 <p class="section-description">
-                    Escape World er et sted der eventyr møter hjernetrim. Vi er et team med en lidenskap for å lage unike og minneverdige escape rooms. Våre opplevelser er inspirert av retroverdenen, fylt med neon-lys, klassisk musikk og spennende gåter. Her handler det om samarbeid, kreativitet, og utfordringene som får adrenalinet til å pumpe!
+                    Escape Elvebakken er et sted der eventyr møter hjernetrim. Vi er et team med en lidenskap for å lage unike og minneverdige escape rooms. Våre opplevelser er inspirert av retroverdenen, fylt med neon-lys, klassisk musikk og spennende gåter. Her handler det om samarbeid, kreativitet, og utfordringene som får adrenalinet til å pumpe!
                 </p>
 
                 
                 <div class="team-grid">
                     <div class="team-member">
-                        <img src="founder.jpg" alt="Grunnleggeren">
-                        <h3>Jonas Eriksen</h3>
+                        <img src="/Bilder/shared image.jpeg" alt="Grunnleggeren">
+                        <h3>Storm Davidsen</h3>
                         <p>Grunnlegger og Hjernetrim-guru. Jonas startet Escape World for å dele sin lidenskap for utfordrende gåter og spill med verden.</p>
                     </div>
                     <div class="team-member">
-                        <img src="designer.jpg" alt="Designer">
-                        <h3>Elisabeth Larsen</h3>
+                        <img src="/Bilder/Yep.jpeg" alt="Designer">
+                        <h3>Kristian Viloria</h3>
                         <p>Kreativ leder og romdesigner. Elisabeth står bak de unike rommene og sørger for at hver detalj fanger den rette stemningen.</p>
                     </div>
                     <div class="team-member">
-                        <img src="developer.jpg" alt="Utvikler">
-                        <h3>Marius Nilsen</h3>
+                        <img src="/Bilder/yes.jpeg" alt="Utvikler">
+                        <h3>Simen Hedlo Saasen</h3>
                         <p>Teknologi-ekspert og gåteutvikler. Marius bringer teknologi inn i gåtene og lager dynamiske opplevelser som setter hodet på prøve.</p>
                     </div>
+                </div>
+                <div class="team-member">
+                    <img src="/Bilder/gruppe.jpeg" width="1000px">
+
                 </div>
             </div>
         </section>
