--- a/Index.HTML
+++ b/Index.HTML
@@ -44,17 +44,17 @@
                     </p>
                     <div class="room-grid">
                         <div class="room">
-                            <img src="Bilder/last ned (1).jpeg" alt="Rom 1: Arkadens Hemmelighet">
+                            <img src="Bilder/shared image (1).jpeg" alt="Level 1: Arkadens Hemmelighet">
                             <h3>Level 1</h3>
                             <p>Utforsk en mystisk arkade fylt med gåter og spillmaskiner fra 80-tallet. Test dine ferdigheter og se om du kan avsløre hemmelighetene som lurer her.</p>
                         </div>
                         <div class="room">
-                            <img src="/Bilder/last ned (2).jpeg" alt="Rom 2: Tidsmaskinens Reise">
+                            <img src="/Bilder/rom.jpeg" alt="level2 2: Tidsmaskinens Reise">
                             <h3>Level 2</h3>
                             <p>Reis tilbake i tid til 1985 og unnslipp før tiden renner ut. Kan du og teamet ditt løse gåtene i tide?</p>
                         </div>
                         <div class="room">
-                            <img src="/Bilder/last ned.jpeg" alt="Rom 3: Den Neonbelyste Byen">
+                            <img src="/Bilder/shared image (2).jpeg" alt="level 3: Den Neonbelyste Byen">
                             <h3>Level 3</h3>
                             <p>Opplev en futuristisk neonby full av gåter og mystikk. Overlev en natt i denne mørke, men fargerike verdenen og finn veien ut!</p>
                         </div>
