--- a/Index.HTML
+++ b/Index.HTML
@@ -38,7 +38,7 @@
         
                <section class="rooms" id="rooms">
                 <div class="container">
-                    <h2>Våre Escape Rom</h2>
+                    <h2>Vår Escape Rom</h2>
                     <p class="section-description">
                         Velkommen til våre spennende og unike escape rooms! Hvert rom er designet for å gi deg og teamet ditt en utfordrende og engasjerende opplevelse fylt med gåter og eventyr.
                     </p>
