--- a/kontakt.html
+++ b/kontakt.html
@@ -59,7 +59,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 Escape World. Alle rettigheter reservert.</p>
+            <p>&copy; 2024 Escape Elvebakken. Alle rettigheter reservert.</p>
         </div>
     </footer>
 
