--- a/Index.HTML
+++ b/Index.HTML
@@ -23,13 +23,13 @@
                 </ul>
             </nav>
         </div>
-    </header>
+    </header>acs
 
     
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h2>Opplev Oslo's Beste Retro Escape Room!</h2>
+                <h2>Opplev Elvebakken sitt ny Escape room</h2>
                 <p>Samle teamet ditt og løse utfordringer i et 80-talls eventyr.</p>
                 <a href="#" class="cta-button">Bestill Nå</a>
             </div>
@@ -67,7 +67,7 @@
     
     <footer>
         <div class="container">
-            <p>&copy; 2024 Escape Elvebakken. Alle rettigheter reservert.</p>
+            <p>&copy; 2024 Escape Elvebakken</p>
         </div>
     </footer>
 
