--- a/Omoss.html
+++ b/Omoss.html
@@ -39,17 +39,17 @@
                     <div class="team-member">
                         <img src="/Bilder/shared image.jpeg" alt="Grunnleggeren">
                         <h3>Storm Davidsen</h3>
-                        <p>Grunnlegger og Hjernetrim-guru. Jonas startet Escape World for å dele sin lidenskap for utfordrende gåter og spill med verden.</p>
+                        <p></p>
                     </div>
                     <div class="team-member">
                         <img src="/Bilder/Yep.jpeg" alt="Designer">
                         <h3>Kristian Viloria</h3>
-                        <p>Kreativ leder og romdesigner. Elisabeth står bak de unike rommene og sørger for at hver detalj fanger den rette stemningen.</p>
+                        <p></p>
                     </div>
                     <div class="team-member">
                         <img src="/Bilder/yes.jpeg" alt="Utvikler">
                         <h3>Simen Hedlo Saasen</h3>
-                        <p>Teknologi-ekspert og gåteutvikler. Marius bringer teknologi inn i gåtene og lager dynamiske opplevelser som setter hodet på prøve.</p>
+                        <p></p>
                     </div>
                 </div>
                 <div class="team-member">
@@ -63,7 +63,7 @@
    
     <footer>
         <div class="container">
-            <p>&copy; 2024 Escape World. Alle rettigheter reservert.</p>
+            <p>&copy; 2024 Escape Elvebakken</p>
         </div>
     </footer>
 
