--- a/Omoss.html
+++ b/Omoss.html
@@ -31,7 +31,7 @@
             <div class="container">
                 <h2>Om Oss</h2>
                 <p class="section-description">
-                    Escape Elvebakken er et sted der eventyr møter hjernetrim. Vi er et team med en lidenskap for å lage unike og minneverdige escape rooms. Våre opplevelser er inspirert av retroverdenen, fylt med neon-lys, klassisk musikk og spennende gåter. Her handler det om samarbeid, kreativitet, og utfordringene som får adrenalinet til å pumpe!
+                    Escape Elvebakken er et sted der eventyr møter hjernetrim. Vi er et team elever med en lidenskap for å lage unike og minneverdige escape rooms. Våre opplevelser er inspirert av retroverdenen, fylt med neon-lys, arkade musikk og spennende gåter. Her handler det om samarbeid, kreativitet, og utfordringene som får adrenalinet til å pumpe!
                 </p>
 
                 
@@ -39,7 +39,7 @@
                     <div class="team-member">
                         <img src="/Bilder/shared image.jpeg" alt="Grunnleggeren">
                         <h3>Storm Davidsen</h3>
-                        <p></p>
+                        <p>Storm Davidsen er hovedansvarlig for å overvåke og styre alt som foregår i kontrollrommet vårt under escape room-spillene. Med full kontroll over kameraer og kommunikasjonssystemer, sørger han for at deltakerne får en sømløs og spennende opplevelse.</p>
                     </div>
                     <div class="team-member">
                         <img src="/Bilder/Yep.jpeg" alt="Designer">
