--- a/Index.HTML
+++ b/Index.HTML
@@ -40,7 +40,7 @@
                 <div class="container">
                     <h2>Vår Escape Rom</h2>
                     <p class="section-description">
-                        Velkommen til våre spennende og unike escape rooms! Hvert rom er designet for å gi deg og teamet ditt en utfordrende og engasjerende opplevelse fylt med gåter og eventyr.
+                        Velkommen til vår spennende escape room! Hvert level er designet for å gi deg og teamet ditt en utfordrende og engasjerende opplevelse fylt med gåter og eventyr.
                     </p>
                     <div class="room-grid">
                         <div class="room">
