more text changes

--- a/Index.HTML
+++ b/Index.HTML
@@ -30,7 +30,7 @@
         <section class="hero">
             <div class="hero-content">
                 <h2>Opplev Elvebakken sitt ny Escape room</h2>
-                <p>Samle teamet ditt og løse utfordringer i et 80-talls eventyr.</p>
+                <p>Samle teamet ditt og løs utfordringer i et 80-talls eventyr.</p>
                 <a href="#" class="cta-button">Bestill Nå</a>
             </div>
         </section>
