--- a/Index.HTML
+++ b/Index.HTML
@@ -31,7 +31,7 @@
             <div class="hero-content">
                 <h2>Opplev Elvebakken sitt ny Escape room</h2>
                 <p>Samle teamet ditt og løse utfordringer i et 80-talls eventyr.</p>
-                <a href="#" class="cta-button">Bestill Nå</a>
+                <a href="#" class="cta-button">Les mer</a>
             </div>
         </section>
 
