--- a/Index.HTML
+++ b/Index.HTML
@@ -23,7 +23,7 @@
                 </ul>
             </nav>
         </div>
-    </header>acs
+    </header>
 
     
     <main>
@@ -31,7 +31,7 @@
             <div class="hero-content">
                 <h2>Opplev Elvebakken sitt ny Escape room</h2>
                 <p>Samle teamet ditt og løs utfordringer i et 80-talls eventyr.</p>
-                <a href="#" class="cta-button">Bestill Nå</a>
+                <a href="#" class="cta-button">Les mer</a>
             </div>
         </section>
 
@@ -40,7 +40,7 @@
                 <div class="container">
                     <h2>Vår Escape Rom</h2>
                     <p class="section-description">
-                        Velkommen til vår spennende escape room! Hvert level er designet for å gi deg og teamet ditt en utfordrende og engasjerende opplevelse fylt med gåter og eventyr.
+                        Velkommen til vårt spennende escape room! Hvert level er designet for å gi deg og teamet ditt en utfordrende og engasjerende opplevelse fylt med gåter og eventyr.
                     </p>
                     <div class="room-grid">
                         <div class="room">
@@ -70,14 +70,6 @@
             <p>&copy; 2024 Escape Elvebakken</p>
         </div>
     </footer>
-
-    <div class="pixelated-loader" id="loader">
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-    </div>
     
 
     <script>
