--- a/Index.HTML
+++ b/Index.HTML
@@ -46,17 +46,17 @@
                         <div class="room">
                             <img src="Bilder/shared image (1).jpeg" alt="Level 1: Arkadens Hemmelighet">
                             <h3>Level 1</h3>
-                            <p></p>
+                            <p>Oppgaven begynner med at deltakerne befinner seg inne i en gammel, nedlagt arkadehall. Støvet ligger tykt over de gamle spillautomatene, og svakt blinkende lys avslører ledetråder skjult blant de rustne maskinene. Hovedmålet er å finne en vei ut før tiden går ut, men veien er ikke enkel. De første ledetrådene er kodet inn i de gamle spilleautomatene, der du må dekode et gammelt poengsystem for å finne skjulte tallkombinasjoner og symboler.</p>
                         </div>
                         <div class="room">
                             <img src="/Bilder/rom.jpeg" alt="level2 2: Tidsmaskinens Reise">
                             <h3>Level 2</h3>
-                            <p></p>
+                            <p>Etter å ha løst de første gåtene, låser du opp en hemmelig rom i bakrommet. Her står gamle kasser fylt med deler av arkademaskiner, ledninger og defekte skjermer. For å komme videre må deltakerne sette sammen en ødelagt maskin ved hjelp av et gammelt kretsdiagram, som er skjult i deler av et gammelt flipperspill. Når maskinen er operativ, vil den avsløre et viktig hint til neste del av oppgaven.</p>
                         </div>
                         <div class="room">
                             <img src="/Bilder/shared image (2).jpeg" alt="level 3: Den Neonbelyste Byen">
                             <h3>Level 3</h3>
-                            <p></p>
+                            <p>Den siste utfordringen er å hacke seg inn i arkadens gamle strømstyringspanel, som låser døren til frihet. Et komplisert mønster av ledninger må kobles sammen riktig, basert på informasjon samlet tidligere i spillet. Når panelet er riktig konfigurert, vil det aktivere hovedstrømmen, og den gamle metallporten vil åpne seg. Klarer gruppen å fullføre i tide, slipper de ut av arkaden – men en feil kobling kan føre til at de må starte fra begynnelsen!</p>
                         </div>
                     </div>
                 </div>
