--- a/kontakt.html
+++ b/kontakt.html
@@ -44,12 +44,12 @@
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
                         <h3>Telefon</h3>
-                        <p><a href="tel:+4712345678">+47 12 34 56 78</a></p>
+                        <p><a href="tel:+4712345678">+47 450 01 632</a></p>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <h3>Adresse</h3>
-                        <p>Oslo Gate 12, 0123 Oslo, Norge</p>
+                        <p>Vestre Elvebakke 3, 0182 Oslo, Norge</p>
                     </div>
                 </div>
             </div>
