--- a/Index.HTML
+++ b/Index.HTML
@@ -67,7 +67,7 @@
     
     <footer>
         <div class="container">
-            <p>&copy; 2024 Escape Elvebakken</p>
+            <p>&copy; Storm, Norias, Szymon</p>
         </div>
     </footer>
     
@@ -92,3 +92,4 @@
 </body>
 </html>
 
+<!-- CREATED BY Storm, Norias, & Szymon-->
