--- a/Index.HTML
+++ b/Index.HTML
@@ -67,7 +67,7 @@
     
     <footer>
         <div class="container">
-            <p>&copy; Storm, Norias, Szymon</p>
+            <p>&copy; 2024 Escape Elvebakken</p>
         </div>
     </footer>
     
@@ -91,5 +91,3 @@
     </script>
 </body>
 </html>
-
-<!-- CREATED BY Storm, Norias, & Szymon-->
