--- a/kontakt.html
+++ b/kontakt.html
@@ -44,7 +44,7 @@
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
                         <h3>Telefon</h3>
-                        <p><a href="tel:+4712345678">+47 450 01 632</a></p>
+                        <p><a href="tel:+4712345678">+47 123456789</a></p>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
