--- a/Index.HTML
+++ b/Index.HTML
@@ -29,6 +29,7 @@
     <main>
         <section class="hero">
             <div class="hero-content">
+                <img src="/Bilder/" alt="">
                 <h2>Opplev Elvebakken sitt ny Escape room</h2>
                 <p>Samle teamet ditt og løs utfordringer i et 80-talls eventyr.</p>
                 <a href="#" class="cta-button">Les mer</a>
@@ -91,3 +92,4 @@
     </script>
 </body>
 </html>
+
